SfApp/force-app/main/default/objects/Plz_Metadata_Status__c/Plz_Metadata_Status__c.object-meta.xml
<CustomObject>
    <label>Metadata Status</label>
    <nameField>
        <label>Metadata Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metadata Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>