SfApp/force-app/main/default/objects/Plz_Metadata_Status__c/fields/Plz_flag__c.field-meta.xml
<CustomField>
    <fullName>Plz_flag__c</fullName>
    <formula>IF( ISPICKVAL( Plz_Status__c , &apos;Synchronized&apos;) , &apos;success&apos;,
IF( ISPICKVAL( Plz_Status__c , &apos;Not Synchronized&apos;) , &apos;error&apos;,
IF( ISPICKVAL( Plz_Status__c , &apos;Not Yet Analyzed&apos;) , &apos;warning&apos;,
&apos;&apos;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag</label>
    <type>Text</type>
</CustomField>