SfApp/force-app/main/default/objects/Plz_Metadata_Status__c/fields/Plz_Icon__c.field-meta.xml
<CustomField>
    <fullName>Plz_Icon__c</fullName>
    <formula>IF( AND(ISPICKVAL( Plz_Status__c , &apos;Synchronized&apos;) ,
(TODAY()- Plz_Last_Time_Analyzed__c)&gt;3 ),&apos;utility:warning&apos;,
IF( ISPICKVAL( Plz_Status__c , &apos;Not Synchronized&apos;) , &apos;utility:priority&apos;,
IF( ISPICKVAL( Plz_Status__c , &apos;Not Yet Analyzed&apos;) , &apos;utility:lower_flag&apos;,
&apos;utility:success&apos;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icon</label>
    <type>Text</type>
</CustomField>