SfApp/force-app/main/default/objects/Plz_Metadata_Status__c/fields/Plz_Last_Time_Analyzed__c.field-meta.xml
<CustomField>
    <fullName>Plz_Last_Time_Analyzed__c</fullName>
    <label>Last Time Analyzed</label>
    <type>Date</type>
</CustomField>