SfApp/force-app/main/default/objects/Plz_Metadata_Status__c/fields/Plz_Name__c.field-meta.xml
<CustomField>
    <fullName>Plz_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>