SfApp/force-app/main/default/objects/Plz_Metadata_Status__c/fields/Plz_Path__c.field-meta.xml
<CustomField>
    <fullName>Plz_Path__c</fullName>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>