SfApp/force-app/main/default/objects/Plz_Metadata_Status__c/fields/Plz_Status__c.field-meta.xml
<CustomField>
    <fullName>Plz_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Synchronized</fullName>
            </value>
            <value>
                <fullName>Not Synchronized</fullName>
            </value>
            <value>
                <fullName>Not Yet Analyzed</fullName>
                <label>Not Analyzed Yet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>