SfApp/force-app/main/default/objects/Plz_Metadata_Status__c/fields/Plz_type__c.field-meta.xml
<CustomField>
    <fullName>Plz_type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MetadataStatusType</valueSetName>
    </valueSet>
</CustomField>